Fixed card image alignment issue

--- a/src/components/ui/card/CardBody.scss
+++ b/src/components/ui/card/CardBody.scss
@@ -10,5 +10,6 @@
 @media(min-width: 600px) {
     .card-body {
         font-size: .875rem;
+        height: 52.5%;
     }
 }
