--- a/src/components/ui/card/CardImage.scss
+++ b/src/components/ui/card/CardImage.scss
@@ -4,3 +4,8 @@
     border-radius: 5px 5px 0 0;
     object-fit: cover;
 }
+@media(min-width: 600px) {
+    .card-image {
+        height: 47.5%;
+    }
+}
