--- a/src/components/ui/card/InlineCard.scss
+++ b/src/components/ui/card/InlineCard.scss
@@ -12,6 +12,7 @@
 
         .card-body {
             width: 70%;
+            height: 100%;
         }
 
         .card-title {
